creusot/tests/should_fail/diagnostics/mul_unimplemented.stderr
error[E0277]: Cannot multiply `i32` by `_` in logic
 --> mul_unimplemented.rs:8:9
  |
8 |     x * y
  |     ----^
  |     |   |
  |     |   no implementation for `i32 * _` in logic
  |     required by a bound introduced by this call
  |
  = help: the trait `creusot_contracts::logic::ops::MulLogic<_>` is not implemented for `i32`
  = help: the trait `creusot_contracts::logic::ops::MulLogic` is implemented for `creusot_contracts::Int`

error[E0277]: Cannot multiply `i32` by `i32` in logic
 --> mul_unimplemented.rs:8:5
  |
8 |     x * y
  |     ^^^^^ no implementation for `i32 * i32` in logic
  |
  = help: the trait `creusot_contracts::logic::ops::MulLogic` is not implemented for `i32`
  = help: the trait `creusot_contracts::logic::ops::MulLogic` is implemented for `creusot_contracts::Int`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
